Updates from ShareLaTeX

--- a/additional.bib
+++ b/additional.bib
@@ -355,3 +355,29 @@ month = {},
 year = {},
 note = {(Accessed on 03/25/2016)}
 }
+@article{Brennan2007,
+abstract = {Early in 2004, the British Government announced the award of eight enormous IT contracts with a combined value of more than d6 billion. The companies selected would introduce new IT systems and processes to Europe’s largest public sector organisation, the National Health Service (NHS) in England. The contracts were due to run for 7 years, until December 2010. At the end of June this year, the contracts will be exactly halfway through. But all is not well with the National Programme for IT (NPfIT), and both the programme and the agency NHS Connecting for Health (NHS CfH) set up to deliver the programme, have received considerable, and sustained criticism from many sources since their inception. Is this criticism justified or are some critics simply jumping onto a bandwagon? This paper attempts to provide an unbiased (if such a thing is possible) commentary on the programme so far.},
+author = {Brennan, Sean},
+doi = {10.1057/palgrave.jit.2000104},
+file = {:Users/tom/Documents/Papers/National Programme for IT commentary.pdf:pdf},
+isbn = {0268-3962},
+issn = {02683962},
+journal = {Journal of Information Technology},
+keywords = {Clinical IT,Connecting for Health,Health informatics,NHS IT project,NPfIT},
+number = {3},
+pages = {202--211},
+title = {{The biggest computer programme in the world ever! How's it going?}},
+volume = {22},
+year = {2007}
+}
+@article{Storer2010,
+abstract = {This paper proposes a novel approach to systems modelling based on responsibilities. The approach is designed to help users identify and analyse the hazards and associated risks that can arise in complex socio-technical systems that span organisational boundaries. Through a case study this paper shows how the technique can identify the vulnerabilities that may arise because human, organisational or system agents fail to discharge the responsibilities assigned to them.},
+author = {Lock, R. and Storer, T. and Sommerville, I.},
+file = {:Users/tom/Documents/Papers/Responsibility Modelling for Risk Analysis.pdf:pdf},
+isbn = {9780415555098},
+number = {September 2009},
+title = {{Responsibility modelling for risk analysis}},
+url = {http://eprints.gla.ac.uk/71594/},
+year = {2009}
+}
+
