--- a/dissertation.tex
+++ b/dissertation.tex
@@ -8,7 +8,6 @@
 \usepackage{fullpage}
 \usepackage{indentfirst}
 \usepackage{csquotes}
-\usepackage{cleveref}
 \usepackage{float}
 \usepackage{enumitem}
 \usepackage{verbments}
@@ -16,6 +15,8 @@
 \usepackage[sorting=none,backend=bibtex]{biblatex}
 \usepackage[usenames, dvipsnames]{xcolor}
 \usepackage[autostyle, english = american]{csquotes}
+\usepackage[backref]{hyperref}
+\usepackage{cleveref}
 \MakeOuterQuote{"}
 
 \crefformat{section}{§#2#1#3}
