Updates from ShareLaTeX

--- a/additional.bib
+++ b/additional.bib
@@ -380,4 +380,11 @@ title = {{Responsibility modelling for risk analysis}},
 url = {http://eprints.gla.ac.uk/71594/},
 year = {2009}
 }
-
+@misc{32.2.24:online,
+author = {},
+title = {32.2. ast — Abstract Syntax Trees — Python 2.7.11 documentation},
+howpublished = {\url{https://docs.python.org/2/library/ast.html}},
+month = {},
+year = {},
+note = {(Accessed on 03/27/2016)}
+}
