Updates from ShareLaTeX

--- a/additional.bib
+++ b/additional.bib
@@ -388,3 +388,11 @@ month = {},
 year = {},
 note = {(Accessed on 03/27/2016)}
 }
+@misc{Overv50:online,
+author = {MatPlotLib development team},
+title = {Matplotlib 1.5.1 documentation},
+howpublished = {\url{http://matplotlib.org/contents.html}},
+month = {},
+year = {},
+note = {(Accessed on 03/25/2016)}
+}
