Updates from ShareLaTeX

--- a/additional.bib
+++ b/additional.bib
@@ -396,3 +396,11 @@ month = {},
 year = {},
 note = {(Accessed on 03/25/2016)}
 }
+@book{Christofides:1975:GTA:1098653,
+ author = {Christofides, Nicos},
+ title = {Graph Theory: An Algorithmic Approach (Computer Science and Applied Mathematics)},
+ year = {1975},
+ isbn = {0121743500},
+ publisher = {Academic Press, Inc.},
+ address = {Orlando, FL, USA},
+} 
