--- a/library.bib
+++ b/library.bib
@@ -9,7 +9,7 @@ author = {Herrmann, Thomas and Loser, Kai-Uwe},
 doi = {10.1080/014492999118904},
 file = {:Users/tom/Documents/Papers/HeLo99-Vim.pdf:pdf},
 issn = {0144-929X},
-journal = {Behaviour {\&} Information Technology},
+journal = {Behaviour \& Information Technology},
 keywords = {ImTeMa},
 number = {5},
 pages = {313--323},
