--- a/dissertation.tex
+++ b/dissertation.tex
@@ -3,22 +3,18 @@
 
 \pdfoutput=1
 
-\documentclass[a4paper]{l4proj}
+\documentclass[a4paper, usenames, dvipsnames]{l4proj}
 \usepackage[utf8]{inputenc}
-%\usepackage[scaled=0.8]{beramono}
 \usepackage{fullpage}
 \usepackage{indentfirst}
-\usepackage{csquotes}
 \usepackage{float}
 \usepackage{enumitem}
 \usepackage{verbments}
 \usepackage[english]{babel}
 \usepackage[sorting=none,backend=bibtex]{biblatex}
-\usepackage[usenames, dvipsnames]{xcolor}
-\usepackage[autostyle, english = american]{csquotes}
+\usepackage{xcolor}
 \usepackage[backref]{hyperref}
 \usepackage{cleveref}
-\MakeOuterQuote{"}
 
 \crefformat{section}{§#2#1#3}
 \crefformat{chapter}{§#2#1#3}
